<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_not_available">No app available to handle this.</string>

    <!-- X Pass instructions -->
    <string name="title_thanks">Thanks for supporting SeriesGuide!</string>
    <string name="description_x_pass">Keep this app installed to unlock all features in SeriesGuide.</string>
    <string name="migration_install">Touch below to install SeriesGuide.</string>
    <string name="migration_action_install">Install SeriesGuide</string>
    <string name="migration_launch">Touch below to launch SeriesGuide.</string>
    <string name="migration_action_launch">Open SeriesGuide</string>
    <string name="migration_action_hide">Remove icon from app drawer</string>
    <string name="hide_confirmation">Icon removed. Re-install X Pass to restore it.</string>

    <!-- licensing -->
    <string name="licence_check_error">Application error: %1$s</string>
    <string name="action_report_error">Contact support</string>
    <string name="license_check_retry">Unable to validate license. Connect to a network or try to install again.</string>
    <string name="action_license_check">Check license</string>
    <string name="licence_check_fail">This application is not licensed. Please purchase it from Google Play.</string>
    <string name="action_buy_xpass">Purchase X Pass</string>
</resources>