<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.battlelancer.seriesguide.migration.MigrationActivity">

    <LinearLayout
        style="@style/Page.Centered"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        tools:ignore="UnusedAttribute">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_padding"
            android:text="@string/title_thanks"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/large_padding"
            android:text="@string/description_x_pass"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textViewMigrationLaunchInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/large_padding"
            android:text="@string/migration_install"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <ProgressBar
            android:id="@+id/progressBarLicenseCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/buttonMigrationLaunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/migration_action_install" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/large_padding"
            android:background="@color/divider" />

        <Button
            android:id="@+id/buttonMigrationHideLauncher"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/large_padding"
            android:gravity="left|center_vertical"
            android:text="@string/migration_action_hide" />
    </LinearLayout>
</ScrollView>